[gd_scene load_steps=5 format=3 uid="uid://e5x5q1lgbc34"]

[ext_resource type="Script" path="res://Matriz/Nucleo/Sistema Motor/Consumiveis/Parar o Tempo/Script/PararTempo.gd" id="1_bxohw"]
[ext_resource type="Texture2D" uid="uid://c8ynedwnmcoj6" path="res://Assets/Place Holder/Objetos/Comidas/13.png" id="2_wjem3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_13rwp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wjem3")
}],
"loop": true,
"name": &"Parar_Tempo",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6xtng"]

[node name="PararTempo" type="CharacterBody2D" groups=["Coletavel", "Parar_Tempo"]]
collision_layer = 256
collision_mask = 0
script = ExtResource("1_bxohw")

[node name="Textura" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_13rwp")
animation = &"Parar_Tempo"
autoplay = "Parar_Tempo"

[node name="Colisao" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6xtng")

[node name="AtualizadoDeQuantidadeDeNodos" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="TempoParado" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="timeout" from="TempoParado" to="." method="_on_tempo_parado_timeout"]
